--- a/task5/tag.html
+++ b/task5/tag.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>hello</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="tag.css" />
 </head>
 
-<body class="label">
+<body>
+
 
     <div class="tag"> <img src="logog.png"></div>
     <div class="logo3"><img src="logogo.png"></div>
@@ -15,16 +19,15 @@
 
 
     <div class="logo2">
-        <div><img src="logoo.png" width="70" height="70"></div>
+        <div><img src="logoo.png"></div>
         <div class="heit">BJPTTeng</div>
     </div>
 
 
     <div class="logo1">
-        <div><img src="logol.png" width="70" height="70"></div>
-        <div class="character" >88888888</div>
+        <div><img src="logol.png"></div>
+        <div class="character">22222222</div>
     </div>
-
 
 </body>
 
