--- a/task5/task5.html
+++ b/task5/task5.html
@@ -19,13 +19,13 @@
     <main>
         <div class="background-image">
             <img class="head-portrait" src="logo1.png">
-        <div class="name">
-            徐士林55岁
+        <div class="name-column">
+            <div class="name">徐士林55岁</div>
+            <div class="icon-text">
+            <img class="icon"  src="logo3.png"> 
+            <div class="address">&nbsp京城·四方·报纸林</div>
+            </div>
         </div>
-       <div class="icon-text">
-        <img class="icon"  src="logo3.png">
-        <div class="address">&nbsp京城·四方·报纸林</div>
-       </div>
       </div>
       <input placeholder="专业技能"/>
       <div class=" info">
