--- a/task11/html/task11.html
+++ b/task11/html/task11.html
@@ -24,7 +24,7 @@
        </div>
        <div class="tag">
            <img src="../logo/logo2.png" class="combined">
-           <input type="password" placeholder="请输入密码" name="pwd" style="outline:none;"    class="mark">
+           <input type="password" placeholder="请输入密码"  maxlength="11"  name="pwd" style="outline:none;"    class="mark">
        </div>
    </main>
    <footer>
