--- a/task14/task14-1/html/task14-1.html
+++ b/task14/task14-1/html/task14-1.html
@@ -48,6 +48,7 @@
     </header>
     <main>
         <div class="carousel">
+
             <div class="map">
                 <img class="picture" src="../logo/logo-1.png" alt="">
                 <img class="picture" src="../logo/logo-1.png" alt="">
@@ -60,6 +61,8 @@
                 <div class="small"></div>
                 <div class="smalll"></div>
             </div>
+
+
         </div>
         <div class="container">
             <div class="row  norm">
@@ -271,23 +274,11 @@
                     <div class="inter">友情链接</div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>手机软件</span>
+                        <span class="pursuit">手机软件</span>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>教师招聘</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span class="pursuit">找工作</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>手机软件</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>教师招聘</span>
+                        <span class="pursuit">教师招聘</span>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
@@ -295,27 +286,11 @@
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>手机软件</span>
+                        <span class="pursuit">手机软件</span>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>教师招聘</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span class="pursuit">找工作</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>手机软件</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>手机软件</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>教师招聘</span>
+                        <span class="pursuit">教师招聘</span>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
@@ -323,23 +298,11 @@
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>手机软件</span>
+                        <span class="pursuit">手机软件</span>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>教师招聘</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span class="pursuit">找工作</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>手机软件</span>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-1 set">
-                        <div class="combined"></div>
-                        <span>教师招聘</span>
+                        <span class="pursuit">教师招聘</span>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
@@ -347,7 +310,47 @@
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-1 set">
                         <div class="combined"></div>
-                        <span>手机软件</span>
+                        <span class="pursuit">手机软件</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">手机软件</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">教师招聘</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">找工作</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">手机软件</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">教师招聘</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">找工作</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">手机软件</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">教师招聘</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">找工作</span>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-1 set">
+                        <div class="combined"></div>
+                        <span class="pursuit">手机软件</span>
                     </div>
                 </div>
             </div>
