--- a/jstask-2-4/jQuerytaks2/html/jstask2-4.html
+++ b/jstask-2-4/jQuerytaks2/html/jstask2-4.html
@@ -41,7 +41,7 @@
     </main>
     <footer>
         <div id="fanhuic" class="over">结束游戏</div>
-        <div class="over">法官日志</div>
+        <div class="over  return">法官日志</div>
     </footer>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="../jquery/jstask2-4.js"></script>
